--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,12 +1,12 @@
 @import '../../../styles.scss';
 
 footer {
-  background-color: black;
-  color: white;
+  background-color: $primary-color; // Utiliza a cor primária
+  color: $text-color-light;
   padding: 20px 0;
   text-align: center;
 
   p {
-    margin: 0;
+      margin: 0;
   }
 }
