--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,65 @@
+@import "~primeng/resources/themes/saga-blue/theme.css";
+@import "~primeng/resources/primeng.min.css";
 
+// Definição de cores primárias e secundárias
 $primary-color: #0e031d; // Material Design Blue
 $secondary-color: #ff0062; // Material Design Deep Orange
 $text-color: #333333; // Dark Gray
 $bg-color: #f5f5f5; // Light Gray
+$text-color-light: #fff; // Light text color for dark backgrounds
 
 // Estilos globais
-::ng-deep {
-  body {
-    font-family: 'Roboto', sans-serif;
-    color: $text-color;
-    background-color: $bg-color;
+body {
+  font-family: 'Inter', sans-serif;
+  color: $text-color;
+  background-color: $bg-color;
+}
+
+a {
+  color: $primary-color;
+  text-decoration: none; // Remove underline by default
+
+  &:hover {
+      text-decoration: underline;
+      color: darken($primary-color, 10%);
   }
 }
+
+.primary-btn, .secondary-btn {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-weight: 500;
+  cursor: pointer;
+  color: $text-color-light;
+
+  &:hover {
+      background-color: lighten($primary-color, 10%);
+  }
+}
+
+.primary-btn {
+  background-color: $primary-color;
+}
+
+.secondary-btn {
+  background-color: $secondary-color;
+
+  &:hover {
+      background-color: lighten($secondary-color, 10%);
+  }
+}
+
+.card {
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+  .card {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+  }
+
