--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,8 +7,9 @@
     <p-button label="Contato" routerLink="/contact" styleClass="primary-btn"></p-button>
   </div>
   <div class="p-toolbar-group-right">
-    <p-button icon="pi pi-shopping-cart" styleClass="p-button-warning" label="Carrinho"
-    badge="{{ cartItemCount }}" badgeClass="p-badge-danger" (click)="openCart()">
+<p-button icon="pi pi-shopping-cart" styleClass="p-button-warning" label="Carrinho"
+          badge="{{ cartItemCount }}" badgeClass="p-badge-danger"
+          (click)="openCart()">
 </p-button>
   </div>
 </p-toolbar>
